--- a/src/editor.scss
+++ b/src/editor.scss
@@ -12,3 +12,13 @@ $primaryColor: #4527a4;
     font-weight: bold;
   }
 }
+
+.storefindStoreFinder {
+  border: 1px solid #4527a4;
+
+  span {
+    font-size: 18px;
+    font-weight: 600;
+    color: #3c01cd;
+  }
+}
