--- a/assets/css/admin-main.css
+++ b/assets/css/admin-main.css
@@ -146,3 +146,6 @@ ul.action_ul li:nth-child(2) {
   font-weight: 600;
   margin-bottom: 10px;
 }
+.dataTables_wrapper .dataTables_length select {
+  width: 50px;
+}
